--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@hocs/debounce-handler": "^0.5.0",
+    "@hocs/throttle-handler": "^0.5.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "react": "^16.6.1",
