--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@hocs/debounce-handler": "^0.5.0",
     "@hocs/throttle-handler": "^0.5.0",
+    "@material-ui/core": "^3.5.1",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "react": "^16.6.1",
