--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.8",
-    "@fortawesome/free-solid-svg-icons": "^5.5.0",
-    "@fortawesome/react-fontawesome": "^0.1.3",
     "@hocs/debounce-handler": "^0.5.0",
     "@hocs/throttle-handler": "^0.5.0",
     "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "react": "^16.6.1",
